[tool.poetry]
name = "impressions_keeper"
version = "0.1.0"
description = ""
authors = ["Гурин Никита Сергеевич <nsgurin@fintechiq.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
pytest = "^7.1.2"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
